paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_3/sample_003/target.compile.log
error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_3/sample_003/target.rs:11:42
   |
11 |         self.bits = (self.bits & !0xF) | (val & 0xF);
   |                                          ^^^^^^^^^^^ expected `u16`, found `u32`

error[E0277]: no implementation for `u16 | u32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_3/sample_003/target.rs:11:40
   |
11 |         self.bits = (self.bits & !0xF) | (val & 0xF);
   |                                        ^ no implementation for `u16 | u32`
   |
   = help: the trait `BitOr<u32>` is not implemented for `u16`
   = help: the following other types implement trait `BitOr<Rhs>`:
             `&u16` implements `BitOr<u16>`
             `&u16` implements `BitOr`
             `u16` implements `BitOr<&u16>`
             `u16` implements `BitOr`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_3/sample_003/target.rs:19:9
   |
18 |     fn t(&self) -> u32 {
   |                    --- expected `u32` because of return type
19 |         self.bits & 0xF
   |         ^^^^^^^^^^^^^^^ expected `u32`, found `u16`
   |
help: you can convert a `u16` to a `u32`
   |
19 |         (self.bits & 0xF).into()
   |         +               ++++++++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.